static/style.css
@font-face {
    font-family: "DM Sans";
    src:
        local("DM Sans"),
        url("../static/fonts/DMSans-VariableFont_opsz,wght.ttf")
            format("truetype");
}

@font-face {
    font-family: "DM Sans Italic";
    src:
        local("DM Sans Italic"),
        url("../static/fonts/DMSans-Italic-VariableFont_opsz\,wght.ttf")
            format("truetype");
}

@font-face {
    font-family: "Cascadia Code";
    src:
        local("Cascadia Code Italic"),
        url("../static/fonts/CascadiaCodeItalic.ttf") format("truetype");
    font-style: italic;
}

@font-face {
    font-family: "Cascadia Code";
    src:
        local("Cascadia Code"),
        url("../static/fonts/CascadiaCode.ttf") format("truetype");
    font-style: normal;
}

head.forest-shade--moss-slate ~ body {
    /* --primary-50: 233 236 208;
    --primary-100: 224 230 193;
    --primary-200: 202 218 164;
    --primary-300: 175 206 136;
    --primary-400: 143 194 107;
    --primary-500: 106 183 78;
    --primary-600: 71 148 61;
    --primary-700: 46 112 47;
    --primary-800: 31 76 38;
    --primary-900: 16 40 23;
    --primary-950: 9 22 14; */
    
    --primary-50: 208 236 226;
    --primary-100: 193 230 219;
    --primary-200: 164 218 207;
    --primary-300: 136 206 198;
    --primary-400: 107 194 193;
    --primary-500: 78 174 183;
    --primary-600: 61 133 148;
    --primary-700: 46 94 112;
    --primary-800: 31 59 76;
    --primary-900: 16 29 40;
    --primary-950: 9 15 22;
    

    --secondary-50: 217 227 217;
    --secondary-100: 205 218 207;
    --secondary-200: 182 201 186;
    --secondary-300: 158 183 167;
    --secondary-400: 135 166 149;
    --secondary-500: 111 149 133;
    --secondary-600: 89 120 111;
    --secondary-700: 67 91 87;
    --secondary-800: 46 62 61;
    --secondary-900: 24 32 32;
    --secondary-950: 13 17 18;

    --accent: hsl(from rgb(var(--secondary-500)) h calc(s + 9) calc(l + 2));
    --bg: light-dark(rgb(var(--secondary-200)), rgb(var(--secondary-950)));
}

:root {
    --primary-50: 247 244 254;
    --primary-100: 239 235 252;
    --primary-200: 227 218 250;
    --primary-300: 206 189 245;
    --primary-400: 180 151 238;
    --primary-500: 155 109 229;
    --primary-600: 140 77 218;
    --primary-700: 124 59 198;
    --primary-800: 104 49 166;
    --primary-900: 87 42 136;
    --primary-950: 54 25 92;

    --secondary-50: 243 243 250;
    --secondary-100: 233 234 246;
    --secondary-200: 214 214 239;
    --secondary-300: 189 189 228;
    --secondary-400: 167 162 215;
    --secondary-500: 148 138 202;
    --secondary-600: 131 114 185;
    --secondary-700: 113 96 162;
    --secondary-800: 93 80 131;
    --secondary-900: 77 69 106;
    --secondary-925: 55 49 76;
    --secondary-950: 34 30 46;
    --secondary-975: 17 15 23;

    --accent: rgb(var(--primary-400));
}

:root {
    color-scheme: light dark;

    --max-width: 47rem;

    --bg-header: var(--accent);
    --fg-header: rgb(var(--secondary-950));
    --border-header: rgb(var(--secondary-700));

    --plain-bg: light-dark(rgb(var(--primary-50)), rgb(var(--secondary-975)));

    --bg: light-dark(rgb(var(--primary-200)), rgb(var(--secondary-950)));

    --bg-surface0: light-dark(
        rgb(var(--primary-100)),
        rgb(var(--secondary-900))
    );

    --bg-surface1: light-dark(
        rgb(var(--primary-50)),
        rgb(var(--secondary-975))
    );

    --text: light-dark(rgb(var(--secondary-900)), rgb(var(--primary-200)));

    --subtext: light-dark(rgb(var(--secondary-700)), rgb(var(--primary-300)));

    --anchor: light-dark(rgb(var(--primary-700)), rgb(var(--primary-400)));

    --anchor-visited: light-dark(
        rgb(var(--secondary-700)),
        rgb(var(--secondary-400))
    );

    --anchor-active: light-dark(
        rgb(var(--primary-950)),
        rgb(var(--primary-100))
    );

    --border: light-dark(rgb(var(--primary-800)), rgb(var(--secondary-600)));

    --border-surface0: light-dark(
        rgb(var(--primary-800)),
        rgb(var(--secondary-600))
    );

    --preview: light-dark(rgb(var(--secondary-200)), rgb(var(--secondary-950)));
}

body {
    font-family: "DM Sans", sans-serif;
    margin: 0;
    background-color: var(--bg);
    color: var(--text);
}

.wrapper {
    min-height: 100vh;
    display: grid;
    grid-template-rows: auto 1fr auto;
}

nav.bar {
    background: linear-gradient(
        to right,
        hsl(from var(--accent) calc(h + 10) calc(s - 10) calc(l - 3)),
        var(--accent)
    );
}

nav.bar::after {
    content: "";
    display: block;
    height: 2px;
    width: 100%;

    background: linear-gradient(
        to right,
        hsl(from var(--border-header) calc(h + 20) calc(s + 10) calc(l + 3)),
        var(--border-header)
    );
}

@media (max-width: 425px) {
    nav.bar {
        background: linear-gradient(
            35deg,
            hsl(from rgb(var(--accent)) calc(h + 10) calc(s - 10) calc(l - 3)),
            rgb(var(--accent))
        );
    }

    nav.bar > ul {
        justify-content: center;
    }

    #nav-index,
    #nav-index:hover,
    #nav-index:active {
        border-bottom: 0;
        margin-bottom: 0;
    }
}

nav.bar > ul {
    max-width: min(var(--max-width), 100%);
    margin-left: auto;
    margin-right: auto;
    display: flex;
    column-gap: 0.5rem;
    flex-wrap: wrap;
    font-size: 1.2rem;
    padding-inline: 0;
    margin-block: 0;
    list-style: none;
}

nav.bar li a {
    display: inline-block;
    padding: 0.5rem 0.5rem;
    text-decoration: none;
    color: var(--fg-header);

    &:hover {
        background-color: rgb(0 0 0 / 10%);
        margin-bottom: -2px;
        border-bottom: 2px solid rgb(0 0 0 / 30%);
    }

    &:active {
        background-color: rgb(0 0 0 / 20%);
        margin-bottom: -2px;
        border-bottom: 2px solid rgb(0 0 0 / 50%);
    }

    &.active {
        text-decoration: underline;
    }
}

#nav-index {
    font-family: "Cascadia Code", sans-serif;
    font-weight: 500;
    font-feature-settings: "zero";
}

main {
    flex-grow: 1;
    font-family: "DM Sans", sans-serif;
    margin: 1rem;
    max-width: calc(100vw - 2rem);

    & > * {
        max-width: min(var(--max-width), 100%);
        margin-left: auto;
        margin-right: auto;
    }
}

a {
    color: var(--anchor);

    &:visited {
        color: var(--anchor-visited);
    }

    &:hover,
    &:focus {
        text-decoration: none;
    }

    &:active {
        color: var(--anchor-active);
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Cascadia Code", sans-serif;
    font-feature-settings: "zero", "ss01";
    font-style: italic;
    font-weight: 500;
    margin-bottom: 0.5rem;
}

code,
pre {
    font-family: "Cascadia Code", sans-serif;
    font-feature-settings: "zero", "ss01";
    font-weight: 300;
}

img:not(.raw) {
    max-width: 100%;
    height: auto;
    border: 1px solid rgb(53 50 68);
    border-radius: 0.5rem;
}

#title {
    font-size: 2rem;
    margin-bottom: 0.2rem;
}

.metadata {
    /* make italic */
    font-family: "DM Sans Italic", sans-serif;
    color: var(--subtext);
    margin-bottom: 1rem;
    display: flex;
    flex-direction: row;
    gap: 1rem;
}

.table-of-contents {
    background-color: var(--bg-surface0);
    list-style: none;
    padding-inline-start: 0;
    padding: 1rem;

    & h3 {
        margin-top: 0;
    }

    & a {
        color: var(--text);
    }
}

footer {
    padding: 1rem;
    background-color: var(--bg-header);
    color: var(--fg-header);
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    border-top: 2px solid var(--border-header);

    @media (max-width: 768px) {
        flex-direction: row-reverse;
    }
}

div._88x31s {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    gap: 1px;

    & > * {
        width: 88px;
        height: 31px;
        display: block;
    }

    img {
        image-rendering: pixelated;
    }
}

@media (max-width: 768px) {
    .tablet-hide {
        display: none;
    }
}

@media (min-width: 426px) {
    .mobile-show {
        display: none;
    }
}

@media (max-width: 425px) {
    .mobile-hide {
        display: none;
    }

    footer {
        padding: 0.5em;
        font-size: 2em;
    }
}

.sr-only {
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(50%);
    height: 1px;
    width: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
}

pre {
    background-color: var(--plain-bg);
    padding: 1rem;
    border: 1px solid var(--border);
    border-radius: 0.5rem;
    font-family: "Cascadia Code", monospace;
    text-overflow: clip;
    overflow-x: scroll;

    & b {
        font-weight: 500;
    }
}

pre[lang="ansi"] {
    --red: rgb(243, 139, 168);
    --green: rgb(166, 227, 161);
    --yellow: rgb(249, 226, 175);
    --blue: rgb(137, 180, 250);
    --pink: rgb(245, 194, 231);
    --teal: rgb(148, 226, 213);
    --black: #6c7086;
}

.card-stack {
    display: grid;
    gap: 0.5em;
    grid-template-columns: 1fr 1fr 1fr;

    @media (max-width: 768px) {
        grid-template-columns: 1fr 1fr;
    }

    @media (max-width: 425px) {
        grid-template-columns: 1fr;
    }
}

.card:hover > .title {
    color: var(--anchor);
    text-decoration: underline;

    .year {
        color: var(--subtext);
    }
}

.card-stack > a {
    display: flex;
    flex-direction: column;
}

.card {
    border-radius: 0.5rem;
    background-color: var(--bg-surface0);
    /*padding: 1em;*/
    color: var(--text);
    border: 1px solid var(--border);
    display: block;
    height: 100%;
    overflow: clip;

    .preview {
        max-width: 100%;
        aspect-ratio: 16 / 9;
        background: var(--preview);
        display: flex;
        flex-direction: column;

        border-bottom: 1px solid var(--border);

        overflow: clip;

        img {
            margin: auto;
            max-width: 100%;
        }
    }

    .blurb {
        padding: 0.5em;

        span {
            display: block;

            &.title {
                font-size: 1.2rem;
            }

            &.year {
                color: var(--anchor);
                display: inline;
                font-size: 0.8em;
            }

            &.description {
                color: var(--subtext);
                font-size: 0.8em;
            }
        }
    }
}

blockquote {
    border-radius: 1em;
    border: 1px solid var(--border);
    border-left: 0.3em solid var(--border);
    padding: 0.1em 0.7em;
    background-color: var(--bg-surface0);
    word-break: break-all;
}

